# seo-page-analyzer

./: .env_example  .gitignore  Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml  requirements.txt  todo.md
.github/workflows/: cov.yml  lint-test.yml
page_analyzer/: __init__.py  app.py  db_connect.py  db_requests.py  main.py  models.py  parsing.py  settings.py  validation.py
page_analyzer/templates/: 404.html  base.html  home.html  index.html  invalid_url.html  urls.html  urls_id.html
